--- a/src/pages/sta/moments.astro
+++ b/src/pages/sta/moments.astro
@@ -49,7 +49,7 @@ Note that d is the distance from the applied force to the point of interest and 
 
 You can determine the direction of moments using the right hand rule and wrapping your fingers around where the moment is turning. The direction your thumb is pointing is the direction of the moment. 
 
-Moments are assumed to be positive when they point in the <InlineEquation equation='-\\hat{k}' /> direction (clockwise rotation) and negative when they point in the <InlineEquation equation='+\\hat{k}' /> direction (counterclockwise rotation). 
+Moments are assumed to be negative when they point in the <InlineEquation equation='-\\hat{k}' /> direction (clockwise rotation) and positive when they point in the <InlineEquation equation='+\\hat{k}' /> direction (counterclockwise rotation). 
 
 <Image src='/sta/moments/MomentConventions.jpg' width='6'> Positive and negative moment conventions.</Image>
 
