--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -158,7 +158,7 @@ To determine which of these scenarios will occur, you should write the equations
 </p>
 <!-- From Lecture 27 -->
 
-  <DisplayEquation title="Location of Normal Force: Derivation" id="nfl" background="True" equation="\\begin{align} \\sum F_x &= P - F_f = 0 \\\\ \\sum F_y &= N - W = 0 \\\\ \\sum M_O &= -Py \\neq 0 \\end{align}" derivation="True">
+  <DisplayEquation title="Location of Normal Force: Derivation" id="nfl" background="True" equation="\\begin{align} &\\sum F_x = P - F_f = 0 \\\\ &\\sum F_y = N - W = 0 \\\\ &\\sum M_O = -Py \\neq 0 \\end{align}" derivation="True">
     
       <Image src='/sta/friction/NLocation.jpg' width='5'></Image>
 
