Rewrote #hpf-3D and #hfp-2D to be dynamic
Rewrote #hfp-3D and #hfp-2D to be dynamic, removed uses of padding in order to support smaller screens/windows, applied \mathrm{} to units to create distinction from variables

--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -82,13 +82,13 @@ In 3D, the value for <InlineEquation equation=" w " />, the distributed load on 
 <Image src='/sta/hydrostatic_fluid_pressure/Fluid3DPlate.PNG' width='5'></Image>
 
 <DisplayEquation equation = "F_R = \\rho * g * h * b * L" background = "True" title = "In 3D, the resultant force from the distributed load can be written as" id = "hfp-3D" derivation = "True">
-	<p>
-		<div style = "padding-left: 292px; margin-bottom: 10px;"><InlineEquation equation = "w = p = \\rho * g * h"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ [\\frac{N}{m^2}]"/></span></div>
-		<div style = "text-align: center; margin-bottom: 10px;">(force over area)</div>
-		<div style = "text-align: center; margin-bottom: 10px;">To find <InlineEquation equation = "F_R,"/> multiply by area:</div>
-		<div style = "padding-left: 284px; margin-bottom: 10px;"><InlineEquation equation = "F_R = w * (b * L)"/> &larr; volume under distributed load!</div>
-		<div style = "text-align: center;"><InlineEquation equation = "= \\rho * g * h * b * L"/></div>
+	<DisplayEquation equation = "\\begin{align} w = p = \\rho * g * h && \\textcolor{gray}{\\mathrm{[\\frac{N}{m^2}]}} \\end{align}"/>
+	<p class = "text-center">
+		(force over area)<br>
+		To find <InlineEquation equation = "F_R,"/> multiply by area:
 	</p>
+	<DisplayEquation equation = `\\begin{align} F_R &= w * (b * L) \\Leftarrow \\text{volume under distributed load!} \\\\
+	&= \\rho * g * h * b * L \\end{align}`/>
 </DisplayEquation>
 
 <p>
@@ -98,13 +98,13 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 <Image src='/sta/hydrostatic_fluid_pressure/Fluid2DPlate.PNG' width='5'></Image>
 
 <DisplayEquation equation = "F_R = \\rho * g * h * b * L" background = "True" title = "In 2D, the resultant force from the distributed load can be written as" id = "hfp-2D" derivation = "True">
-	<p>
-		<div style = "padding-left: 270px; margin-bottom: 10px;"><InlineEquation equation = "w = p * b = \\rho * g * h * b"/><span style = "color: gray"><InlineEquation equation = "\\ \\ \\ \\ \\ [\\frac{N}{m^2}] * [m] = [\\frac{N}{m}]"/></span></div>
-		<div style = "text-align: center; margin-bottom: 10px;">(force over length)</div>
-		<div style = "text-align: center; margin-bottom: 10px;">To find <InlineEquation equation = "F_R,"/> multiply by length:</div>
-		<div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "F_R = w * L = \\rho * g * h * b * L"/></div>
-		<div style = "padding-left: 332px;">&uarr; area under distributed load!</div>
+	<DisplayEquation equation = "\\begin{align} w = p * b = \\rho * g * h * b && \\textcolor{gray}{\\mathrm{[\\frac{N}{m^2}] * [m] = [\\frac{N}{m}]}} \\end{align}"/></span></div>
+	<p class = "text-center">
+		(force over length)<br>
+		To find <InlineEquation equation = "F_R,"/> multiply by length:
 	</p>
+	<DisplayEquation equation = `\\begin{align} F_R = w &* L = \\rho * g * h * b * L \\\\
+	&\\Uparrow \\text{area under distributed load!} \\end{align}`/>
 </DisplayEquation>
 
 </SubSection>
