--- a/src/pages/sta/force_systems.astro
+++ b/src/pages/sta/force_systems.astro
@@ -122,17 +122,18 @@ Now we can solve for the center of mass of the distributed load, <InlineEquation
 
 <div style = "display: flex; justify-content: center; align-items: center;">
   <div style = "display: flex; gap: 120px;">
-      <div style = "width: 300px; height: 150px; text-align: center;">
-          <div style = "text-align: center; margin-bottom: 10px;">Moment about 0 from force <InlineEquation equation = "dF:"/></div>
-          <div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "\\begin{align} dM &amp;= x * (dF) \\\\ &amp;= x * w * dx \\end{align}"/></div>
-          <div style = "text-align: center; margin-bottom: 10px;">Total moment <InlineEquation equation = "(M_R)"/> about point 0:</div>
-          <div style = "text-align: center;"><InlineEquation equation = "M_R = \\int dM = \\int_{0} ^ {L} x * w(x) \\, dx"/></div>
+      <div style = "width: 300px; height: 200px; text-align: center;">
+        <p class = "text-center">Moment about 0 from force <InlineEquation equation = "dF:"/></p>
+        <DisplayEquation equation = `\\begin{align} dM &= x * (dF) \\\\
+        &= x * w * dx \\end{align}`/>
+        <p class = "text-center">Total moment <InlineEquation equation = "(M_R)"/> about point 0:</p>
+        <DisplayEquation equation = "M_R = \\int dM = \\int_{0} ^ {L} x * w(x) \\, dx"/>
       </div>
-      <div style = "width: 300px; height: 150px; text-align: center;">
-        <div style = "text-align: center; margin-bottom: 10px;">Total moment <InlineEquation equation = "(M_R)"/> about point 0:</div>
-          <div style = "text-align: center; margin-bottom: 10px;"><InlineEquation equation = "M_R = \\bar{x} \\ F_R"/></div>
-          <div style = "text-align: center; margin-bottom: 10px;">solve for <InlineEquation equation = "\\bar{x}:"/></div>
-          <div style = "padding-left: 10px;"><InlineEquation equation = "\\bar{x} = \\frac{M_R}{F_R} = \\frac{\\int_{0} ^ {L} x * w \\, dx}{\\int_{0} ^ {L} w \\, dx}"/></div>
+      <div style = "width: 300px; height: 200px; text-align: center;">
+        <p class = "text-center">Total moment <InlineEquation equation = "(M_R)"/> about point 0:</p>
+        <DisplayEquation equation = "M_R = \\bar{x} * F_R"/>
+        <p class = "text-center">solve for <InlineEquation equation = "\\bar{x}:"/></p>
+        <DisplayEquation equation = "\\bar{x} = \\frac{M_R}{F_R} = \\frac{\\int_{0} ^ {L} x * w \\, dx}{\\int_{0} ^ {L} w \\, dx}"/>
       </div>
     </div>
 </div>
