center of mass code readability
adjusted #com #cov code readability

--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -115,21 +115,19 @@ The center of mass, center of gravity, and center of volume are all represented 
 <DisplayEquation title = "Center of gravity" id = "cog" background = "True" equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dW}{\\int dW} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dW}{\\int dW}"></DisplayEquation>
 
 <DisplayEquation title = "Center of mass" id = "com" background = "True" equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dm}{\\int dm} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dm}{\\int dm}" derivation = "True" >
-    <p class="text-center">We know that: \(W = m \cdot g\)</p>
-        
-        <DisplayEquation equation =` \\begin{align} \\Rightarrow dW &=  dm \\cdot g  + m \\cdot \\cancel{dg}  && \\text{assuming } g \\text{ is constant} \\\\ 
-        &= g\\cdot dm && dg = 0 \\end{align}` />
-        <DisplayEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{g} \\ dm}{\\int \\cancel{g} dm}"/>
-        <DisplayEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dm}{\\int dm} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dm}{\\int dm}"/>
+    <p class = "text-center">We know that: <InlineEquation equation = "W = m * g"/></p>
+    <DisplayEquation equation = `\\begin{align} \\Rightarrow dW &= dm \\cdot g + m \\cdot \\cancel{dg} && \\text{assuming } g \\text{ is constant} \\\\ 
+    &= g\\cdot dm && \\textcolor{gray}{dg = 0} \\end{align}` />
+    <DisplayEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{g} \\ dm}{\\int \\cancel{g} dm}"/>
+    <DisplayEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dm}{\\int dm} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dm}{\\int dm}"/>
 </DisplayEquation>
 
 <DisplayEquation title = "Center of volume (centroid)" id = "cov" background = "True" equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dV}{\\int dV} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dV}{\\int dV}" derivation = "True">
     <p class="text-center">We know that mass = <InlineEquation equation = "\\rho * V \\ \\ \\ \\ \\"/>(<InlineEquation equation = "\\rho"/> = density)</p>
-        <DisplayEquation equation =`\\begin{align} \\Rightarrow  dm &= \\rho * dV + V * \\cancel{d \\rho} && \\text{assuming } \\rho \\text{ is constant} \\\\
-         &= \\rho * dV  && d \\rho = 0 \\end{align}`/>
-        <DisplayEquation equation="\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{\\rho} \\ dV}{\\int \\cancel{\\rho} \\ dV}" />
-        <DisplayEquation equation="\\bar{y} = \\frac{\\int \\tilde{y} \\ dV}{\\int dV} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dV}{\\int dV}" />
-    </p>
+    <DisplayEquation equation = `\\begin{align} \\Rightarrow dm &= \\rho * dV + V * \\cancel{d \\rho} && \\text{assuming } \\rho \\text{ is constant} \\\\
+    &= \\rho * dV && \\textcolor{gray}{d \\rho = 0} \\end{align}`/>
+    <DisplayEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} * \\cancel{\\rho} \\ dV}{\\int \\cancel{\\rho} \\ dV}"/>
+    <DisplayEquation equation = "\\bar{y} = \\frac{\\int \\tilde{y} \\ dV}{\\int dV} \\ \\ \\ \\bar{x} = \\frac{\\int \\tilde{x} \\ dV}{\\int dV}"/>
 </DisplayEquation>
 
 <p>
