--- a/src/pages/md/Position_Velocity_Acceleration.astro
+++ b/src/pages/md/Position_Velocity_Acceleration.astro
@@ -157,7 +157,7 @@ import Enumerate from "../../components/Enumerate.astro";
 
             <Warning title="Computing Velocities" id="warn1">
                 Note that it is possible to solve for for <InlineEquation equation="\\omega_3"/> and <InlineEquation equation="\\omega_4"/> analytically. However this can be time consuming and depends on the exact nature of the mechanism that is being analyzed. For a standard 4-bar linkage with pin joints the solution is:
-                <DisplayEquation equation="\\begin{gather} \\omega_3 = \\frac{a\\omega _2 sin(\\theta _4-\\theta _2)}{bsin(\\theta _3-\\theta _4)} \\\\ \\omega_4 = \\frac{a\omega _2 sin(\\theta _2-\\theta _3)}{bsin(\\theta _4-\\theta _3)} \\end{gather}" title="Velocity Solutions for 4-bar Linkage with Pin Joints" background="True" />
+                <DisplayEquation equation="\\begin{gather} \\omega_3 = \\frac{a\\omega _2 sin(\\theta _4-\\theta _2)}{bsin(\\theta _3-\\theta _4)} \\\\ \\omega_4 = \\frac{a\\omega _2 sin(\\theta _2-\\theta _3)}{bsin(\\theta _4-\\theta _3)} \\end{gather}" title="Velocity Solutions for 4-bar Linkage with Pin Joints" background="True" />
             </Warning>
 
 
