--- a/src/pages/md/Position_Velocity_Acceleration.astro
+++ b/src/pages/md/Position_Velocity_Acceleration.astro
@@ -53,7 +53,7 @@ import Enumerate from "../../components/Enumerate.astro";
         <p><Image src="/md/Position_Velocity_Acceleration/Polar.png" width="5"></Image></p>
 
         <p>
-            The <InlineEquation equation="\ j" /> in each vector represents the imaginary number <InlineEquation equation="\ \sqrt{-1" />. The Euler formula can be used to break the polar form into the complex form.
+            The <InlineEquation equation="\ j" /> in each vector represents the imaginary number <InlineEquation equation="\ \sqrt{-1} " />. The Euler formula can be used to break the polar form into the complex form.
         </p>
 
         <p><DisplayEquation equation="\e^{\\pm j\\theta} = cos(\\theta) + jsin(\\theta)" title="Euler Formula Form" background="True" /></p>
