--- a/src/pages/sol/transverse_shear.astro
+++ b/src/pages/sol/transverse_shear.astro
@@ -125,9 +125,9 @@ Shear stress can also be evaluated at any given point (<InlineEquation equation=
 
  <DisplayEquation equation="I_z = \\frac{1}{12} bh^3\\" /> 
  <DisplayEquation equation="t=b\\" /> 
- <DisplayEquation equation="Q = A\\bar{y}\\" /> 
- <DisplayEquation equation="Q = b(\\frac{1}{2}h-y)[y+\\frac{1}{2}(\\frac{1}{2}h-y)]\\" /> 
- <DisplayEquation equation="Q = \\frac{1}{2}b(\\frac{1}{4}h^2-y^2)\\" /> 
+ <DisplayEquation equation=`\\begin{aligned}Q &= A\\bar{y}\\\\
+ &= b(\\frac{1}{2}h-y)[y+\\frac{1}{2}(\\frac{1}{2}h-y)]\\\\
+ &= \\frac{1}{2}b(\\frac{1}{4}h^2-y^2)\\end{aligned}` /> 
 
 </DisplayEquation>
  
