More removing equations from images and adjusting old changes to be dynamic (#177)
* #nfl equations adjustments

Added equations to yellow box in #nfl and changed -Py = 0 to -Py /= 0 in the derivation

* Equations in #machine-example image

Removed written equations from #machine-example image and rewrote in LaTeX and aligned summations symbols in #nfl.

* Rewrote #hpf-3D and #hfp-2D to be dynamic

Rewrote #hfp-3D and #hfp-2D to be dynamic, removed uses of padding in order to support smaller screens/windows, applied \mathrm{} to units to create distinction from variables

* Dynamic force systems code

rewrote force systems code to not use padding

* center of mass code readability

adjusted #com #cov code readability

* Changed size of figure

* Implemented Mikayla's comments

Made all text black and cropped fluids images

---------

Co-authored-by: mrhoyle2 <105934511+mrhoyle2@users.noreply.github.com>

--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -158,9 +158,9 @@ To determine which of these scenarios will occur, you should write the equations
 </p>
 <!-- From Lecture 27 -->
 
-  <DisplayEquation title="Location of Normal Force: Derivation" id="nfl" background="True" equation="" derivation="True">
+  <DisplayEquation title="Location of Normal Force: Derivation" id="nfl" background="True" equation="\\begin{align} &\\sum F_x = P - F_f = 0 \\\\ &\\sum F_y = N - W = 0 \\\\ &\\sum M_O = -Py \\neq 0 \\end{align}" derivation="True">
     
-      <Image src='/sta/friction/NLocation.jpg' width='5'></Image>
+      <Image src='/sta/friction/NLocation.jpg' width='3'></Image>
 
         <p>
           If the normal force <i>N</i> acted at the middle of the box (at the center of mass), we would write the three equations of equilibrium as follows: 
@@ -173,7 +173,7 @@ To determine which of these scenarios will occur, you should write the equations
           So far, so good! However, we run into a problem when we write the sum of moments equation:  
 	</p>
 
-	  <DisplayEquation equation="\\sum M_O = -Py = 0" />
+	  <DisplayEquation equation="\\sum M_O = -Py \\neq 0" />
 
 	<p>
 	The sum of moments equation about point O results in an expression that is not possible: we know that <i>P</> cannot be zero, so there must be some sort of moment about the center of the box from the normal force acting offset from the center of mass of the box. 
