--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -482,6 +482,7 @@ const path = Astro.url.pathname;
                                 <li><a href="/md/Cams?origin=sidebar">Cams</a></li>
                                 <li><a href="/md/Position_Velocity_Acceleration?origin=sidebar">Position Velocity Acceleration</a></li>
                                 <li><a href="/md/Dynamic_Force_Analysis?origin=sidebar">Dynamic Force Analysis</a></li>
+                                <li><a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a></li>
                             </ol>
                         </section>
                     </div>
